<resources>
    <string name="app_name">ZooApp</string>

    <string name="S_Lname">Login</string>
    <string name="S_LEmailAddrss">Username</string>
    <string name="S_Lpassword">Password</string>
    <string name="S_Lfgpassword">Forgot Password?</string>
    <string name="S_LButton">LOGIN</string>
    <string name="S_Ldnt_have">Dont have an Account?</string>
    <string name="S_LsignUP">Sign Up</string>
    <string name="S_LGoogleButton">Google</string>
    <string name="S_LFbButton">Facebook</string>

    <string name="S_Rname">Registration</string>
    <string name="S_EmailAddrss">Username</string>
    <string name="S_REmailAddrss">Email</string>
    <string name="S_RcontactNum">Contact Number</string>
    <string name="S_Emailddrss">Username</string>
    <string name="S_Rpassword">Password</string>
    <string name="S_RCpassword">Confirm Password</string>
    <string name="S_RgButton">Register</string>

    <string name="S_Userpname">User Name</string>
    <string name="S_UserPEmailAddrss">Email</string>
    <string name="S_UserContact">Contact Number</string>
    <string name="S_UserLogout">Logout</string>

    <string name="S_HTButton">Book Your Ticket</string>
    <string name="S_Hlink1"><u>Your Previous Ticket booking </u> </string>
    <string name="S_HAButton">Animal Feeding</string>
    <string name="S_Hlink2"><u>Your booking Information</u></string>
    <string name="S_HASButton">Animal Show</string>
    <string name="S_Hlink3"><u>Your Show Details</u></string>
    <string name="S_HGButton">Guided Tour</string>
    <string name="S_Hlink4"><u>Your Tour Information</u></string>


    <string name="S_TicketBname">Book Your Ticket</string>
    <string-array name="S_Nationality">
        <item>National</item>
        <item> Local</item>
        <item> Foreign</item>
    </string-array>
    <string name="S_TNational">Nationality</string>
    <string name="S_TAdult">Adult (Over 15)</string>
    <string name="S_TChild">Child (5 -15)</string>
    <string name="S_TDate">Select Date</string>
    <string name="S_TBook">Book Now</string>

    <string name="S_TDname">Booking Details</string>
    <string name="S_TDcancelButton">Cancel Booking</string>


    ----------------------------------------------------------------------


    <string name="B_AnameButton">Aquarium Show</string>
    <string name="B_BnameButton">Bird Show</string>

    <string name="B_Aqname">Aquarium Show</string>
    <string name="B_AnimalType">Animal Type</string>
    <string name="B_Seat">Number Of Seats</string>
    <string name="B_Showtime">Show Time</string>
    <string name="B_Date">08/04/2021</string>
    <string name="B_ADate">Select Date</string>
    <string name="B_BookButton">Book</string>

    <string name="B_Birdname">Bird Show</string>
    <string name="B_BSeat">Number Of Seats</string>
    <string name="B_BShowtime">Show Time</string>
    <string name="B_BDate">Select Date</string>
    <string name="B_BBDate">08/04/2021</string>
    <string name="B_BBookButton">Book</string>

    <string name="B_BDname">Show Details</string>
    <string name="B_BDcancelButton">Cancel</string>


    <string name="animalDB">Select Animal</string>
    <string name="functionname">Animal Feeding</string>
    <string name="viewtext">View Details</string>
    <string name="Animaldropdown">Select Animal</string>
    <string name="Timedropdown">Time Duration</string>
    <string name="Datepicker">Date</string>
    <string name="Radiobutton1">Child</string>
    <string name="Radiobutton2">Adult</string>
    <string name="TextAge">Age</string>
    <string name="Firstbtn">Submit</string>

    <string-array name="animalFeed">
        <item>Select Animal</item>
        <item>Elephant</item>
        <item>Giraffe</item>
        <item>Fish</item>
        <item>Koala Bear</item>
    </string-array>

    <string-array name="time1">
        <item>Select Time</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
    </string-array>

    <string name="dv_guidedTours">Guided Tours</string>
    <string name="dv_Rep">Reptopia Tour</string>
    <string name="dv_booknow">Book Now</string>
    <string name="dv_email">Enter Your Email</string>
    <string name="dv_local">Local</string>
    <string name="dv_foreign">Foreign</string>
    <string name="dv_adults">No.Of Adults</string>
    <string name="dv_children">No.Of Children</string>
    <string name="dv_date">Enter Date</string>
    <string name="dv_fname">Book Your Tour</string>

    <array name="nationality">

        <item>Local</item>
        <item>Foreign</item>
    </array>

    <string name="forget_topic">Forget Password</string>
    <string name="d_loginaddress">Email Address</string>
    <string name="d_loginBtn">Login</string>

    <array name="child_adult">
        <item>Child</item>
        <item>Adult</item>
    </array>

    <string name="Fg_Buttonn">Login</string>
    <string name="S_FEmailAddrss">Enter Your Email</string>


    <array name="B_Aqshow_ani">
        <item>Select Animal</item>
        <item>Dolphin</item>
        <item>Penguine</item>
        <item>Sea Lion</item>
    </array>

    <string-array name="B_Aqshow_time">
        <item>Select Time</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
    </string-array>

    <string-array name="B_Bshow_time">
        <item>Select Time</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
    </string-array>


    <string-array name="Dv_Nationl">
        <item>National</item>
        <item>Local</item>
        <item>Foreign</item>


    </string-array>

    <string name="S_PricClick">Cheack Price Rate</string>
    <string name="S_Price">Price Chart(LKR)</string>

    <string name="S_Prname">Zoo Price</string>
    <string name="S_Prnationalty">Nationality</string>
    <string name="S_Prchild">Child</string>
    <string name="S_Pradult">Adult</string>
    <string name="S_Prlocal">Local</string>
    <string name="S_Prforiegn">Foriegn</string>


    <string name="list_nationality">Nationality</string>
    <string name="list_adults">Adults</string>
    <string name="list_amount">Adults Amount</string>
    <string name="list_child">Children</string>
    <string name="list_Childp">Childern Amount</string>
    <string name="list_TotalAmount">Total Amount</string>
    <string name="list_date">Book Date</string>
    <string name="list_u_id">UserID</string>
    <string name="t_delete">Cancel Booking</string>


    <string name="list_aniy">Animal Type</string>
    <string name="list_seat">No of Seat Aq</string>
    <string name="list_time">Aquarium Show Time</string>
    <string name="list_sdate">Aquarium Show Date</string>
    <string name="list_seat2">No of Seat Bird</string>
    <string name="list_time2">Bird Show Time</string>
    <string name="list_sdate2">Bird Show Date</string>
    <string name="list_su_id">UserID</string>
    <string name="sht_delete">Cancel Booking</string>


    <string name="list_DwEm">Email</string>
    <string name="list_DwNat">National</string>
    <string name="list_DwNumA">Num Of Adult</string>
    <string name="list_DwNumC">Num Of Childern</string>
    <string name="list_DwDate">Date</string>
    <string name="Lht_DwDte">Cancel Booking</string>


    <string name="list_DjTy">Animal Type</string>
    <string name="list_DjTime">Time Duration</string>
    <string name="list_DJDate">Date</string>
    <string name="list_Djchad">Category</string>
    <string name="list_DjAge">Age</string>

    <string name="Dj_delete">Cancel Booking</string>





</resources>