<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="PriceRate"
    android:background="@drawable/_0521991">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/cherry_cream_soda"
        android:text="@string/S_Price"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="40dp"

        android:layout_marginTop="180dp"
        android:layout_marginEnd="40dp"
        android:background="#80000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <!--table heading-->
        <TableRow android:background="#33000000">

            <TextView
                android:id="@+id/S_Ptopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/S_Prname"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/S_PNational"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/S_Prnationalty"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/S_Padult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/S_Pradult"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/S_Pchild"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/S_Prchild"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/S_PLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/S_Prlocal"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/S_Padult2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="10sp"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/S_Pchild2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="10sp"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/S_Pforiegn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/S_Prforiegn"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/S_Fadult2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="10sp"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/S_Fchild2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="10sp"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </TableRow>

    </TableLayout>





</androidx.constraintlayout.widget.ConstraintLayout>