<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="70dp"
        android:text="@string/S_Rname"
        android:textColor="#333A40"
        android:textColorHint="#9E922B"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/S_Rusername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/S_Rusername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:startIconDrawable="@drawable/ic_rp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/S_Rusername2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/S_EmailAddrss" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/S_Remail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/S_Rusername"
        app:startIconDrawable="@drawable/ic_em">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/S_Remail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/S_REmailAddrss" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/S_Rphone"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/S_Remail"
        app:startIconDrawable="@drawable/ic_p">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/S_Rphone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/S_RcontactNum"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/S_Rpassword"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/S_Rphone"
        app:startIconDrawable="@drawable/ic_pw">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/S_Rpassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/S_Rpassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/S_RconfirmP"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/S_Rpassword"
        app:startIconDrawable="@drawable/ic_pw">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/S_RconfirmP2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/S_RCpassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/S_RgButton"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="#4BC850"
        android:text="@string/S_RgButton"
        app:iconTint="#070707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/S_RconfirmP" />


</androidx.constraintlayout.widget.ConstraintLayout>