<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword">

    <TextView
        android:id="@+id/d_loginTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="70dp"
        android:text="@string/forget_topic"
        android:textColor="#333A40"
        android:textColorHint="#9E922B"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/S_Femail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/d_loginTopic"
        app:startIconDrawable="@drawable/ic_em">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/S_Femail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/S_FEmailAddrss" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Fg_Button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="#63D85B"
        android:text="@string/Fg_Buttonn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/S_Femail"
        app:layout_constraintVertical_bias="0.237"
        app:shapeAppearanceOverlay="@style/Book_Now" />

    <ProgressBar
        android:id="@+id/forgetProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599" />


</androidx.constraintlayout.widget.ConstraintLayout>